# drawing_board

./: Cargo.toml  README.md  asd
client/: Cargo.toml
client/src/: app.rs  lib.rs  main.rs
common_definitions/: Cargo.toml
common_definitions/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
