[package]
name = "drawing_board_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
chrono = {version = "0.4.38", features = ["serde"]}
eframe = {version = "0.29.1", features = ["persistence"]}
egui = "0.29.1"
egui_dock = {version = "0.14.0", features = ["serde"]}
egui_extras = {version = "0.29.1", features = ["all_loaders"]}
quinn = "0.11.5"
rfd = "0.15.0"
serde = "1.0.211"
serde_json = "1.0.132"
strum = {version = "0.26.3", features = ["derive"]}
