[package]
name = "common_definitions"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
serde = "1.0.211"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
strum = {version = "0.26.3", features = ["derive"]}
serde_json = "1.0.132"
egui = "0.29.1"
typed_floats = {version = "1.0.2", features = ["serde"]}
indexmap = {version = "2.6.0", features = ["serde"]}
tokio-util = "0.7.12"
