[package]
name = "drawing_board_server"
version = "0.1.0"
edition = "2021"

[dependencies]
common_definitions = {path = "../common_definitions"}
anyhow = "1.0.91"
dashmap = "6.1.0"
quinn = "0.11.5"
rcgen = "0.13.1"
serde = "1.0.211"
serde_json = "1.0.132"
uuid = {version = "1.11.0", features = ["serde", "v4"]}
tokio = {version = "1.41.0", features = ["full"]}
egui = "0.29.1"
